--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
     </div>
     <div class="space-slider">
         <label for="slider">Spacing:</label>
-        <input type="range" name="slider" id="slider1" min="0" max="100" value="0">
+        <input type="range" name="slider" id="space-slider" min="0" max="100" value="1">
 
         <label for="slider">Blur:</label>
-        <input type="range" name="slider" id="slider1" min="0" max="100" value="0">
+        <input type="range" name="slider" id="blur-slider" min="0" max="100" value="0">
 
-        <label for="slider">Base Color:</label>
-        <input type="range" name="slider" id="slider1" min="0" max="100" value="0">
+        <label for="base">Base Color:</label>
+         <input type="color" id="base" name="base" value="#ffc600 ">
     </div>
     <div class="image-box">
         <img src="background2.jpg" alt="animals">
     </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
