fixed minor changes

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     </div>
     <div class="space-slider">
         <label for="slider">Spacing:</label>
-        <input type="range" name="slider" id="space-slider" min="0" max="100" value="1">
+        <input type="range" name="slider" id="space-slider" min="5" max="100" value="5">
 
         <label for="slider">Blur:</label>
         <input type="range" name="slider" id="blur-slider" min="0" max="100" value="0">
 
         <label for="base">Base Color:</label>
-         <input type="color" id="base" name="base" value="#ffc600 ">
+         <input type="color" id="base" name="base" value="#ffff00">
     </div>
     <div class="image-box">
         <img src="background2.jpg" alt="animals">
