--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          <input type="color" id="base" name="base" value="#ffff00">
     </div>
     <div class="image-box">
-        <img src="background2.jpg" alt="animals">
+        <img class="image" src="background2.jpg" alt="animals">
     </div>
 
     <script src="script.js"></script>
